# tracking-itsu

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.cuda  Dockerfile.gcc  README.md  eclipse_build_targets.txt  main.cpp
MemoryBenchmark/: CMakeLists.txt
benchmarks/root_scripts/: plotTransverseMomentumBenchmark.cxx
benchmarks/scripts/: merge_events.awk  merge_labels.awk  plotTransverseMomentumBenchmark.cxx
benchmarks/scripts/awk/: extract_mean_min_max.awk
benchmarks/scripts/root/: generatePileUpData.cxx  plotComputingTimeBenchmark.cxx  plotMemoryOccupancyBenchmark.cxx  plotTransverseMomentumBenchmark.cxx
doxygen/: tracking-itsu.doxyfile
include/: CAArrayUtils.h  CACell.h  CACluster.h  CAConstants.h  CADefinitions.h  CAEvent.h  CAEventLoader.h  CAHit.h  CAIOUtils.h  CAIndexTable.h  CAIndexTableUtils.h  CALabel.h  CALayer.h  CALookupTable.h  CAMathUtils.h  CAPrimaryVertexContext.h  CAPrimaryVertexContextInitializer.h  CAPrimaryVertexDependentCluster.h  CARoad.h  CATracker.h  CATrackerContext.h  CATrackingUtils.h  CATracklet.h  CAUtils.h  ITSUTracker.h
include/ITSReconstruction/CA/: ArrayUtils.h  Cell.h  Cluster.h  Constants.h  Definitions.h  Event.h  IOUtils.h  IndexTableUtils.h  Label.h  Layer.h  MathUtils.h  PrimaryVertexContext.h  Road.h  Tracker.h  TrackingUtils.h  Tracklet.h
include/ITSReconstruction/CA/gpu/: Array.h  Context.h  PrimaryVertexContext.h  Stream.h  UniquePointer.h  Utils.h  Vector.h
include/cuda/: CACUDAArray.h
include/gpu/: CAGPUArray.h  CAGPUContext.h  CAGPUPrimaryVertexContext.h  CAGPUPrimaryVertexContextTraits.h  CAGPUStream.h  CAGPUTrackingAPI.h  CAGPUUniquePointer.h  CAGPUUtils.h  CAGPUVector.h
src/: CACell.cpp  CACell.cxx  CACluster.cxx  CAEvent.cxx  CAEventLoader.cxx  CAHit.cxx  CAIOUtils.cxx  CAIndexTable.cxx  CAIndexTableUtils.cxx  CALabel.cxx  CALayer.cxx  CALookupTable.cpp  CALookupTable.cxx  CAMathUtils.cxx  CAPrimaryVertexContext.cxx  CAPrimaryVertexContextInitializer.cxx  CAPrimaryVertexDependentCluster.cxx  CARoad.cpp  CARoad.cxx  CATracker.cpp  CATracker.cxx  CATrackerContext.cxx  CATrackingUtils.cxx  CATracklet.cxx  CAUtils.cpp  CAUtils.cxx  CMakeLists.txt  ITSUTracker.cpp
src/CA/: Cell.cxx  Cluster.cxx  Event.cxx  IOUtils.cxx  IndexTableUtils.cxx  Label.cxx  Layer.cxx  PrimaryVertexContext.cxx  Road.cxx  Tracker.cxx  TrackingUtils.cxx  Tracklet.cxx
src/CA/gpu/cuda/: Context.cu  PrimaryVertexContext.cu  Stream.cu  Tracker.cu  Utils.cu
src/gpu/cuda/: CAGPUContext.cu  CAGPUPrimaryVertexContext.cu  CAGPUStream.cu  CAGPUTracker.cu  CAGPUTrackingAPI.cu  CAGPUUtils.cu  CMakeLists.txt
test/: build.sh
